fix dark mode in moviepage

--- a/src/components/Body/movepage/move.css
+++ b/src/components/Body/movepage/move.css
@@ -63,3 +63,7 @@ button{
   background-color:rgb(0,87,255) ;
   margin-top: 10px;
 }
+
+.blue-bg{
+  background-color: #0075C8;
+}
